# Face_detection_opencv_android

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/li/face/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/li/facesample/: CameraHelper.java  MainActivity.kt
app/src/main/res/values/: themes.xml
app/src/test/java/com/li/face/: ExampleUnitTest.kt
face_module/: build.gradle
face_module/src/main/: AndroidManifest.xml
face_module/src/main/cpp/: CMakeLists.txt  face.cpp  yunet.h
face_module/src/main/java/com/li/face/: FaceSDK.java
gradle/wrapper/: gradle-wrapper.properties
